2006-02-23  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.18

	* src/mach-lh7952x/init-lpd79524.c: Tighetened the CF region
	timing as is done for the other targets.
 
	* src/mach-lh7952x/init-lpd79520.c: Adjusted to the CompactFlash
	region timing to meet the CF spec.

	* src/mach-lh7a40x/initialize.c (SMC_BCR6_V): Tightened the CF
	region timing to be closer to the specified minimums.  The
	original WST1 delay was 320ns which may interfere with the LCD
	controller FIFO.

2006-02-22  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c (SMC_BCR1_V): Tightened the
	IOBARRIER region timing to see if we can get access to NOR flash
	without causing display flicker.

2006-02-17  Marc Singer  <elf@buici.com>

	* src/lib/zlib-heap.c (CB_HEAP): Increased the size of the heap so
	I can decompress very large PNG images.

	* Makefile:  1.3.17

	* src/drivers-lh/drv-clcdc.c: New timings for the 6.4" display.
	The vertical front porch is one less than the spec.

	* src/mach-lh7a40x/initialize.c (SDRAM_RAS): Relaxed memory
	timings on the lh7a40x's.  This seems to eliminate display
	glitching as long as we don't use the CF.

2006-02-07  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.16

	* src/mach-lh7952x/init-lpd79524.c: Reworked SDRAM initialization.
	Now, we can init the CPU with a 16 bit SDRAM bus even if the SDRAM
	chips are configured in a 32 bit bus.  Half of the SDRAM will idle
	in this configuration, but we can test CPU performance with the 16
	bit bus.
	
	* src/mach-lh7a40x/cmd-cp15test.c: Added a cp15 test register
	manipulation function.

2006-02-06  Marc Singer  <elf@buici.com>

	* lh7a404_config: Setting default memory mode to SROM_LL.

2006-01-20  Marc Singer  <elf@buici.com>

	* src/lib/pngr.c (read_pngr_plte): When found, a palette is read
	from the PNG file and stored for the decoder.

	* src/drivers-lh/drv-clcdc.c (cmd_splash): Added support for
	palettized images, but only at 8 bits per pel.  Other pel sizes
	require unpacking of the image data.
