@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Linux kernel version: 
-# Tue Feb  7 19:25:12 2006
+# Thu Mar  2 12:23:41 2006
 #
 CONFIG_ARM=y
 CONFIG_CPU_ARMV4=y
@@ -35,6 +35,7 @@ CONFIG_MACH="lh7a40x"
 # CONFIG_MACH_LPD7A400 is not set
 CONFIG_MACH_LPD7A404=y
 # CONFIG_MACH_TROUNCER is not set
+# CONFIG_MACH_LPD7A404_80000258 is not set
 
 #
 # Platform Setup
@@ -70,7 +71,7 @@ CONFIG_CMD_INFO=y
 CONFIG_CMD_WAIT=y
 CONFIG_CMD_XRECEIVE=y
 # CONFIG_CMD_ETH_SMC91X is not set
-# CONFIG_CMD_MEMLIMIT is not set
+CONFIG_CMD_MEMLIMIT=y
 # CONFIG_CMD_ARM920_TEST is not set
 
 #
