@@ -1,3 +1,10 @@
+2006-03-02  Marc Singer  <elf@buici.com>
+
+	* src/mach-lh7a40x/initialize.c (target_init): Added support for
+	the LPD7A404-10, PN 80000258, USB_PWR_EN.  The sense of this line
+	changed between the -10 and the -11 releases of the LPD7A404
+	CardEngine.
+
 2006-02-23  Marc Singer  <elf@buici.com>
 
 	* Makefile: 1.3.18
